# Surprise

./: CHANGELOG.md  pyproject.toml  setup.py
.github/workflows/: benchmarks.yml  build_docs.yml  build_sdist.yml  lint.yml  min_deps.yml
tests/: test_dump.py
