[project]
name = "scikit-surprise"
authors = [{ name = "Nicolas Hug", email = "contact@nicolas-hug.com" }]
description = "An easy-to-use library for recommender systems."
requires-python = ">=3.10"
keywords = [ "recommender", "recommendation system" ]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
license = { "file" = "LICENSE.md" }
dependencies = [
  # Lower bounds are aligned with scikit-learn's as of May 2026
  "joblib>=1.4.0",
  "numpy>=1.24.1",
  "scipy>=1.10.0"
]
dynamic = ["version", "readme"]

[project.scripts]
surprise = "surprise.__main__:main"

[project.urls]
homepage = "https://surpriselib.com"
repository = "https://github.com/NicolasHug/Surprise"

[build-system]
# Note: We build with numpy 2 but the resulting wheel (source or not) should still be
# compatible with numpy < 2
requires = ["setuptools>=61.0.0", "wheel", "Cython>=3.1.0", "numpy>=2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "surprise.__version__"}
readme = { content-type = "text/markdown", file = [
  "README.md",
]}

[tool.setuptools.packages.find]
exclude = ["tests*", "doc*", "examples*",]
